implement groups configuration and ui
groups can be defined in config that list jobs and resources.

in the UI, the list of groups will be shown above the pipeline; they can
be clicked to filter the pipeline down to that group.

jobs or resources that do not belong to any group are shown by default,
and removed only if they have no connecting nodes in the resulting
graph. this allows groups to be defined minimally, rather than having to
maintain a list of all relevant jobs/resources.

[#79154122]

--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -16,17 +16,20 @@ svg h1 a { color: #f5f5f5; }
 #build-title .abort-build input:active { color: #f5f5f5; }
 .builds-list li a { color: #f5f5f5; }
 #builds li a { color: #f5f5f5; }
+.groups li a { color: #f5f5f5; }
 
 /* dark */
 svg .node rect { fill: #151515; }
 #builds { background: #151515; }
 .builds-list { background: #151515; }
 .build-resources .resource-header { background: #151515; }
+.groups { background: #151515; }
 
 /* highlight background */
 svg .edgePath path { stroke: #303030; }
 svg .gateway { fill: #303030; }
 .build-resources { background: #303030; }
+.groups li.active a { background: #303030; }
 
 /* even more highlight background */
 .build-source.first-occurrence .resource-header { background: #505050; }
