--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,13 +1,23 @@
 {{define "title"}}Concourse{{end}}
 
 {{define "body"}}
-<svg id="pipeline" width="100%" height="100%">
-  <g>
-    <defs>
-      <g id="gateway"><rect y="-15" width="2" height="30" class="gateway" /></g>
-    </defs>
-  </g>
-</svg>
+<div id="page-header">
+  <ul class="groups">
+    {{range $group, $enabled := .Groups}}
+    <li{{if $enabled}} class="active"{{end}}><a href="/?groups={{$group}}">{{$group}}</a>
+    {{end}}
+  </ul>
+</div>
+
+<div id="pipeline">
+  <svg width="100%" height="100%">
+    <g>
+      <defs>
+        <g id="gateway"><rect y="-15" width="2" height="30" class="gateway" /></g>
+      </defs>
+    </g>
+  </svg>
+</div>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
 <script src="{{url "Public" "d3.v3.min.js"}}"></script>
@@ -16,7 +26,7 @@
 
 <script>
 $(document).ready(function() {
-  draw({{.Nodes}}, {{.Edges}});
+  draw({{.Groups}}, {{.Nodes}}, {{.Edges}});
 })
 </script>
 {{end}}
