--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -10,6 +10,7 @@ a { color: #6a9fb5; } /* not really used anywhere... */
 
 /* emphasis */
 #build-title h1 { color: #f5f5f5; }
+#build-title .build-times { color: #f5f5f5; }
 #resource-header h1 { color: #f5f5f5; }
 svg .edgeLabel text { fill: #f5f5f5; }
 svg h1 a { color: #f5f5f5; }
