--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,6 +10,21 @@
 </div>
 
 <div id="pipeline">
+  <dl class="legend">
+    <dt class="pending"></dt>
+      <dd>pending</dd>
+    <dt class="started"></dt>
+      <dd>started</dd>
+    <dt class="succeeded"></dt>
+      <dd>succeeded</dd>
+    <dt class="failed"></dt>
+      <dd>failed</dd>
+    <dt class="errored"></dt>
+      <dd>errored</dd>
+    <dt class="aborted"></dt>
+      <dd>aborted</dd>
+  </dl>
+
   <svg width="100%" height="100%">
     <g>
       <defs>
