switch to server-sent events for all build logs
* the scheduling ATC is now responsible for tracking each running build,
  by consuming events from its Turbine endpoint
* remove callbacks endpoints; they are no longer used
* in-flight builds proxy events to their turbine; completed builds read
  events from the database
* remove logfanout and a bunch of no-longer-relevant code
* if a running build's turbine reports 404, mark the build as errored

[#72547842] [#80512764] [#80649160]

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -126,14 +126,6 @@
 <script src="{{url "Public" "ansiparse.js"}}"></script>
 <script src="{{url "Public" "build.js"}}"></script>
 <script type="text/javascript">
-var protocol;
-
-if(window.location.protocol === "https:") {
-  protocol = "wss:";
-} else {
-  protocol = "ws:";
-}
-
-streamLog(protocol + "//" + window.location.host + {{url "LogOutput" .Build | js}})
+streamLog({{url "LogOutput" .Build | js}})
 </script>
 {{end}}
