improve rendering of more complicated pipelines
* share common gateway nodes rather than duplicating for each job
* fix gateway rendering; this regressed with the dagre upgrade
* fix logic for generating edges for a job that depends on two different
  resources with passed: [a, c] and passed: [c]; previously it would
  only render a single edge, now it will render one from the first's
  gateway and a second from from the second's job

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -25,13 +25,7 @@
       <dd>aborted</dd>
   </dl>
 
-  <svg width="100%" height="100%">
-    <g>
-      <defs>
-        <g id="gateway"><rect y="-15" width="2" height="30" class="gateway" /></g>
-      </defs>
-    </g>
-  </svg>
+  <svg width="100%" height="100%"></svg>
 </div>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
