--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -55,6 +55,7 @@ li.pending { background: @base04; }
 /* highlight foreground */
 .build-source .header .version { color: @base06; }
 #build-requires-auth input { color: @base06; }
+svg .node.resource a { color: @base06; }
 
 /* emphasis */
 .build-header h1 { color: @base07; }
